# test_task

./: CMakeLists.txt
src/: BadInputExc.cpp  BadInputExc.h  BinomialCalculator.cpp  BinomialCalculator.h  CMakeLists.txt  LineParser.cpp  LineParser.h  main.cpp
tests/: BinomialCalculatorT.cpp  CMakeLists.txt  LineParserT.cpp
